--- a/hello_sandkiste.ipynb
+++ b/hello_sandkiste.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8pxyFETHwwBkA3v7FYeaz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyND3Ne7Apx2rW+oeCQIcdAL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -47,7 +49,7 @@
         "id": "-OtcmClVA_ec",
         "outputId": "73132a41-5624-42db-aff7-9c54856fca70"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,12 +62,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.test.gpu_device_name()\n"
+      ],
       "metadata": {
-        "id": "HA6o1047BDXc"
+        "id": "HA6o1047BDXc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "280a167b-7abe-4379-f871-18aef69983f8"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "''"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "if 'COLAB_TPU_ADDR' not in os.environ:\n",
+        "  print('Not connected to TPU')\n",
+        "else:\n",
+        "  print(\"Connected to TPU\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ccP0aShECw_k",
+        "outputId": "f117f7cc-9d36-46dc-c214-a5d721f968fb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Connected to TPU\n"
+          ]
+        }
+      ]
     }
   ]
 }
