--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNe8JX0Qp1DpKY+QIm6RR2F",
+      "authorship_tag": "ABX9TyPJ2yhpvybJmJZLDNGHR4TU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,31 @@
         "if os.getenv(\"COLAB_RELEASE_TAG\"):\n",
         "   print(\"Running in Colab\")\n",
         "   !git clone https://github.com/xldrkp/Data-Science-Notebooks.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! npx degit xldrkp/Data-Science-Notebooks -f"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_h6DO95KRLpo",
+        "outputId": "89d7c3b8-54a2-4e24-f989-e686a0dcc23d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l[..................] / rollbackFailedOptional: verb npm-session f840b08b293c1c1\u001b[0m\u001b[K\r[#######...........] \\ extract:degit: verb lock using /root/.npm/_locks/staging\u001b[0m\u001b[K\r[############......] - finalize:degit: sill doSerial finalize 8\u001b[0m\u001b[K\r\r\u001b[K\u001b[?25hnpx: installed 1 in 0.986s\n",
+            "\u001b[36m> destination directory is not empty. Using --force, continuing\u001b[39m\n",
+            "\u001b[36m> cloned \u001b[1mxldrkp/Data-Science-Notebooks\u001b[22m#\u001b[1mHEAD\u001b[22m\u001b[39m\n"
+          ]
+        }
       ]
     }
   ]
