--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -28,11 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "MQ7410yjONcX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQ7410yjONcX",
+        "outputId": "381abf30-8e66-463e-9f8e-ab7f60b6437a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running in Colab\n",
+            "\u001b[K\u001b[?25hnpx: installed 1 in 2.328s\n",
+            "\u001b[36m> destination directory is not empty. Using --force, continuing\u001b[39m\n",
+            "\u001b[36m> cloned \u001b[1mxldrkp/Data-Science-Notebooks\u001b[22m#\u001b[1mHEAD\u001b[22m\u001b[39m\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
