--- a/wordcloud-bremer-stadtmusikanten.ipynb
+++ b/wordcloud-bremer-stadtmusikanten.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/xldrkp/Data-Science-Notebooks/blob/main/textanalysis/analyse-und-visualisierung.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -24,40 +24,36 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "zgUZgLGZLpLx"
-      },
-      "id": "zgUZgLGZLpLx",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "if os.getenv(\"COLAB_RELEASE_TAG\"):\n",
+        "   print(\"Running in Colab\")\n",
+        "   !npx degit xldrkp/Data-Science-Notebooks -f"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd /content/drive/MyDrive/Colab\\ Notebooks/textanalyse-master"
-      ],
-      "metadata": {
-        "id": "3k33N-U5LxBH"
-      },
-      "id": "3k33N-U5LxBH",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! python -m spacy download de_core_news_lg"
-      ],
+      "execution_count": 1,
+      "id": "cL9F3mdcMb-3",
       "metadata": {
         "id": "cL9F3mdcMb-3"
       },
-      "id": "cL9F3mdcMb-3",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/home/aduerkop/.pyenv/versions/3.10.4/envs/yolo-training/bin/python: No module named spacy\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python -m spacy download de_core_news_lg"
+      ]
     },
     {
       "cell_type": "code",
@@ -297,10 +293,14 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "yolo-training",
       "language": "python",
-      "name": "python3"
+      "name": "yolo-training"
     },
     "language_info": {
       "codemirror_mode": {
@@ -312,11 +312,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.10"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "version": "3.10.4"
     }
   },
   "nbformat": 4,
