--- a/wordcloud-bremer-stadtmusikanten.ipynb
+++ b/wordcloud-bremer-stadtmusikanten.ipynb
@@ -268,15 +268,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "92de383f-f567-4253-9e68-bd703daac8ec",
       "metadata": {
         "id": "92de383f-f567-4253-9e68-bd703daac8ec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'wordcloud' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m/home/aduerkop/Downloads/Data-Science-Notebooks/wordcloud-bremer-stadtmusikanten.ipynb Cell 17\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/aduerkop/Downloads/Data-Science-Notebooks/wordcloud-bremer-stadtmusikanten.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Speichern des Bildes\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/aduerkop/Downloads/Data-Science-Notebooks/wordcloud-bremer-stadtmusikanten.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m wordcloud\u001b[39m.\u001b[39mto_file(\u001b[39m\"\u001b[39m\u001b[39moutput/visualisierung.png\u001b[39m\u001b[39m\"\u001b[39m)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'wordcloud' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Speichern des Bildes\n",
-        "wordcloud.to_file(\"img/visualisierung.png\")"
+        "wordcloud.to_file(\"output/visualisierung.png\")"
       ]
     },
     {
