--- a/wordcloud-bremer-stadtmusikanten.ipynb
+++ b/wordcloud-bremer-stadtmusikanten.ipynb
@@ -290,9 +290,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "yolo-training",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "yolo-training"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -304,7 +304,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.11.0"
     }
   },
   "nbformat": 4,
