--- a/NLP_01_wordcloud-bremer-stadtmusikanten.ipynb
+++ b/NLP_01_wordcloud-bremer-stadtmusikanten.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xldrkp/Data-Science-Notebooks/blob/main/wordcloud-bremer-stadtmusikanten.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xldrkp/Data-Science-Notebooks/blob/main/NLP_01_wordcloud-bremer-stadtmusikanten.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -25,6 +25,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "euJpZYuvZqTE",
       "metadata": {
         "id": "euJpZYuvZqTE"
       },
@@ -35,8 +36,7 @@
         "if os.getenv(\"COLAB_RELEASE_TAG\"):\n",
         "   print(\"Running in Colab\")\n",
         "   !npx degit xldrkp/Data-Science-Notebooks -f"
-      ],
-      "id": "euJpZYuvZqTE"
+      ]
     },
     {
       "cell_type": "code",
@@ -289,8 +289,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
